[package]
name = "cronicle-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
dotenvy = "0.15.7"
serde = "1.0.228"
serde_json = "1.0.148"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "macros"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
tokio-cron-scheduler = "0.15.1"
reqwest = { version = "0.13.1", features = ["json", "default-tls"] }

